Eduprov : Add new navbar and Footer

--- a/anthony-boys-school.html
+++ b/anthony-boys-school.html
@@ -52,19 +52,19 @@
       content="The genesis of the school dates back to 1913 when a French Missionary Rev. Fr. Servanton made a humble beginning with the sole purpose and intention to start a school, to cater to the educational needs of the poor children of the locality." />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   
@@ -105,15 +105,15 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark" >
           <b>Anthony Boys School</b> The genesis of the school dates back to 1913 when a French Missionary Rev. Fr. Servanton made a humble beginning with the sole purpose and intention to start a school, to cater to the educational needs of the poor children of the locality. He served the parish and the school from 1898-1948. It was due to his keen interest and vision in the field of education that the school has grown what it is today. The initial structure was started by Late Rev. Msgr. I. B. Pinto in 1950. The task was completed by Late Rev Msgr. F. X. Celestine in 1955. The middle wing and the right-wing were constructed by Rev. Fr. Jabamalai. The left-wing was added by Late Bishop of Karwar Most Rev. Dr. William L. D’Mello during his tenure from 1972-1978. Four more classrooms were added by Late Rev. Fr. Paul Kinatukara, who also took a bold step in starting the High School. The present High School building took a shape during the tenure of The Most Rev. Fr, Ignatius Paul Pinto during 1984-1987.
 
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
             The middle school is aided, and the high school is unaided. The school is a minority educational institution, administered by the Archdiocesan Board of Education of Bangalore. Being a Catholic Institution, it has a number of staff and students from this community. However, admission is open to boys from all religions and communities without discrimination.
 
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
             The school prepares students for the Secondary School Leaving Certificate of Karnataka State Board. Imparting value-based education is one of its main objectives. The motto of our school is “Duty, Discipline, Dedication”.The School is situated in the premises of St Francis Xavier’s Cathedral. The main entrance to the School is from St John’s Church Road, as well as Promenade Road.
 
         </p>
@@ -163,7 +163,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -189,7 +189,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -206,13 +206,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
