--- a/b.sc-pathology-course.html
+++ b/b.sc-pathology-course.html
@@ -52,19 +52,19 @@
     content="Bachelor of Pathology course is an undergraduate program in which you understand disease from a tissue, cellular, molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
@@ -105,7 +105,7 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           <strong>Bachelor of Pathology</strong> course is an undergraduate program in which you to understand disease
           from a tissue, cellular,
           molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated
@@ -117,7 +117,7 @@
 
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           The Pathology courseis specially designed for those students who want to study tissues and human organs in
           order to identify
           the disease. Most of the course programs merge hands-on laboratory experience with classroom lectures.
@@ -126,7 +126,7 @@
           and histology.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Different types of animal research included in many programs for helping students in learning. With bachelor's
           degree students
           prepared with pathology background, then after students can choose the area of specializing such as
@@ -134,7 +134,7 @@
             molecular pathology or toxicology.</b>
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           The degree prepares students for a great career in a multiplicity of subjects.It requires two to five years
           duration
           for the completion of the course; this course >is available in most of the colleges and universities all over
@@ -149,7 +149,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center ">
           Eligibility
         </h2>
       </div>
@@ -172,12 +172,12 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center ">
           Career & Scope
         </h2>
       </div>
       <div class="col-md-12 mt-3">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
           Job seekers have wide opportunities in their employment areas like hospitals, Health Agencies, Investigating
           Agencies,
           Agriculture Departments, Laboratories, Medical centers, Greenhouses, Colleges or Universities, Educational
@@ -228,7 +228,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -254,7 +254,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -271,13 +271,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
