--- a/bachelor-in-mass-communication.html
+++ b/bachelor-in-mass-communication.html
@@ -52,8 +52,8 @@
     content="In the contemporary world, there are many courses that are offered at the undergraduate level, but there are only a few courses that offer you a high-paying scale and that can aid you in having a prosperous future. " />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
@@ -101,7 +101,7 @@
   <div class="container mt-3  mt-1">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           In the contemporary world, there are many courses that are offered at the undergraduate level,
           but there are only a few courses that offer you a high-paying scale and that can aid you in
           having a prosperous future. Among-st such courses, the name of Mass Communication is among
@@ -109,7 +109,7 @@
           your full capacity to mold the news and stuff related to it in such a way that it attracts
           more and more people to your work.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           This course is the direct reflection of the media line and exposure of the journalism.
           This course fully converts one into a real professional in which one just owns the ability
           to mold the truth and expose the culprits, in front of the world.Exposure of truth, worldly
@@ -131,7 +131,7 @@
 
 
       <div class="col-md-12 mt-2">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           One can pursue this course at both levels, one at graduation and second at post-graduation.
           This course seldom requires any stipulation other than the good communication skill. Here is
           the list of a few things that one needs to have to commence the journey in this line.
@@ -166,7 +166,7 @@
 
         <div class="col-md-12 mt-1">
 
-          <p class="text-justify" id="paragraph-font"></p>
+          <p class="text-justify" >
           This course is not at all confined as it has got so many branches and the future of this
           course is quite perforating but it requires the working people, who should have the capability
           to work with dedication. In the national arena, this course is getting viral as the news and
@@ -175,8 +175,9 @@
           this is a great opportunity for those, who have a great command of their accent and words as
           there are so many countries that invite the intriguing writers, who can write about the burning
           issues.
+        </p>
 
-          <p class="text-justify" id="paragraph-font">
+          <p class="text-justify">
             If one is trying for an internship, then they can find a very less pay scale as people don't
             wish to pay more in the initial stage and probably one will be hired at 10k monthly. If
             direct placement is there then one might get 20k to 35k per-months. If one gets the perfect
@@ -227,7 +228,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -253,7 +254,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -270,13 +271,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
