--- a/bachelor-of-arts.html
+++ b/bachelor-of-arts.html
@@ -54,21 +54,21 @@
     content="Bachelor of Arts or a Degree of B. A is a graduate program in which students learn about Liberal Arts or Science or both This course is the oldest course which is still the best choice for many people nowadays." />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png"   >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+  <script type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
@@ -103,13 +103,13 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           <b>Bachelor of Arts</b> or a Degree of <b>B.A is a graduate programin</b> which students learn about
           Liberal Arts or Science or both This course is the oldest course which is still the best
           choices for many people nowadays. The time duration to complete the course is about 3 years
           basically.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Even people from different countries are coming to India to pursue this magnificent subject.
           While completing the course a student has the availability to choose a major and minor subject
           in particular institutions. The options available are Religious studies, Philosophy,
@@ -120,7 +120,7 @@
 
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           The subject Arts has a flexible nature which does not land only in place. The person is
           able to give their importance in various fields. It helps the candidate to find their
           common interest and work forward to achieve their individual goals. There are no compulsory
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark">
           Eligibility
         </h2>
       </div>
@@ -151,7 +151,7 @@
           <li>The good side is that there are many colleges that offer the same type of program.</li>
         </ul>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Now everything is modernized and the admission application forms can easily be downloaded from the
           college website or you can visit <b>EDUPROV’s website</b> to fill the application by selecting
           multiple colleges and uploading necessary documents and <b>EDUPROV Admission Counselors</b> will
@@ -165,13 +165,13 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Scope
         </h2>
       </div>
       <div class="col-md-12 mt-3">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           An <b>Arts degree holder</b> is having massive ways in which they can easily become valuable
           to the working field. They can easily work asResearch and Development
           Managers, Public Affairs Research Analyst, Political Correspondent, political,Commentator,
@@ -182,7 +182,7 @@
           Management Analyst, Information Systems Manager, Finance Manager, Business
           Management Researcher and Business Administrator.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Not only in India but the scope of the job is in large demand in other countries. The
           B.A. degree holder is having a much higher chance of getting a job as an analyst at a
           multinational company.The basic requirement to avail of a job is to have an experience
@@ -229,7 +229,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -255,7 +255,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -272,13 +272,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
