--- a/bachelor-of-physical-education.html
+++ b/bachelor-of-physical-education.html
@@ -52,19 +52,19 @@
     content="Bachelor of Physical Education or B.P.Ed is a bachelor's degree program that deals with educating people on the importance of sports and physical fitness. Generally, this course is offered as a three or four-year degree" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -98,17 +98,17 @@
   </div>
 
 
-  <div class="container mt-3">
+  <div class="container mt-3 text-dark">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           <b>Bachelor of Physical Education or B.P.Ed</b> is a bachelor's degree
           program that deals with educating people on the importance of sports and physical fitness.
           Generally, this course is offered as a three or four-year degree for students who have
           finished their 12th standard exams in any stream with a minimum of 50 percent scores.
           B.P.Ed is also offered as a one or two years long course for candidates who have a graduate degree.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Completion of <b>B.P.Ed</b> can get students lucrative jobs in schools, universities, gyms, sports
           clinics, stadiums, sports authorities and facilities, sports teams and many more as gym
           trainers, yoga instructors, specific sports instructors, referees, physical education
@@ -121,7 +121,7 @@
 
 
     <div class="col-md-12">
-      <h2 class="text-center text-dark" id="tag-font">
+      <h2 class="text-center text-dark" >
         Top Colleges
       </h2>
     </div>
@@ -150,13 +150,13 @@
     </div>
     <hr />
     <div class="col-md-12">
-      <h2 class="text-center text-dark" id="tag-font">
+      <h2 class="text-center text-dark">
         Scope
       </h2>
     </div>
 
     <div class="col-md-12 mt-3">
-      <p class="text-justify" id="paragraph-font">
+      <p class="text-justify" >
         After the completion of a <b>Bachelors's in Physical education degree</b> students can choose to
         join the workforce or decide to take up higher education in both India and abroad in order
         to specialize. Some of the popular choices of courses available for them are <b>Masters of
@@ -215,7 +215,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -241,7 +241,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -258,13 +258,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
