--- a/bachelor-of-social-work.html
+++ b/bachelor-of-social-work.html
@@ -52,19 +52,19 @@
     content="Social work as the name suggests this course will train one to be helpful for others. If you have a passion to help, others then this is the best course for you. This course helps you in different ways to understand the community" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"   >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -99,30 +99,30 @@
 
     
 
-  <div class="container mt-3">
+  <div class="container mt-3 text-dark">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           <b>Social work </b>as the name suggests this course will train one to be helpful for others.
           If you have a passion to help, others then this is the best course for you. This course
           helps you in different ways to understand the community and how to be helpful for the world.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           <b>Bachelor of Social Work (BSW)</b> is a 3-year undergraduate degree in the field of Social Work.
           It is also termed as <b>Bachelor of Arts in Social Work (BASW)</b>. During the course, a candidate
           has to learn the skills of social works in the 6-semester program. This program is beneficial
           for those who have helping nature and wants to do something good for others.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           The aim of the course is to give detailed information to the student about how they can be
           helpful to others. Just like the name suggests a person will be socially involved with others
           while helping the needy, poor or old aged person. The availability of social work is around
           the globe which is beneficial to the BSW degree holder.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           After gaining a <b>bachelor’s degree in BSW,</b> you are able to work in various Agencies that work
           for Human service. There is also an advanced course Degree of <b>Master in Social Work (MSW),</b> which
           can be pursued after a BSW degree.
@@ -135,7 +135,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark">
           Eligibility
         </h2>
       </div>
@@ -153,14 +153,14 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center text-dark" id="tag-font">
+          <h2 class="text-center text-dark" >
             Scope
           </h2>
         </div>
 
 
         <div class="col-md-12 mt-2">
-          <p class="text-justify" id="paragraph-font">
+          <p class="text-justify">
             A <b>BSW degree holder</b> has its own specialization after the completion of the course.
             Still, there are various open fields in which they can work. The specialist in medical
             and psychiatric is able to join counseling centers, clinics, mental hospitals, old age
@@ -171,14 +171,14 @@
 
           </p>
 
-          <p class="text-justify" id="paragraph-font">
+          <p class="text-justify">
             One of the best qualities about this degree is that a person can easily work with international
             organizations like UNICEF, WHO or UNESCO. Another best thing about these organizations is that
             they come to the country with various plans and camps. A degree holder can easily reach them and
             work with them and they are also in need for locals to join with them.
 
           </p>
-          <p class="text-justify" id="paragraph-font">
+          <p class="text-justify" >
             It was used to be known that the salary of a social worker is very low because they work
             for the benefits of others. But with the coming of corporate individuals and different
             program criteria, the salary has increased. The salary will be increased as the experience
@@ -230,7 +230,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -256,7 +256,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -273,13 +273,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
