--- a/bams-course.html
+++ b/bams-course.html
@@ -52,15 +52,15 @@
       content="BAMS or Bachelor of Ayurvedic Medicine and Surgery is an integrated Indian medical undergraduate degree program that offers students a wonderful and useful mixture of both modern medicine and traditional knowledge of Ayurveda." />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
@@ -99,10 +99,10 @@
 
 
 
-  <div class="container mt-3">
+  <div class="container mt-3 text-dark">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           <b>BAMS or Bachelor of Ayurvedic Medicine and Surgery</b> is an integrated Indian medical undergraduate degree
           program that offers
           students a wonderful and useful mixture of both modern medicine and traditional knowledge of Ayurveda.
@@ -115,7 +115,7 @@
           pitta, and Vata.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           <b>BAMS</b> is one of the best courses after 12th for science students. The <b>undergraduate medical
             degree</b> is a four and a half year-long
           course and an extra one year of internship period program to get a live practical and real-life approach so
@@ -136,7 +136,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark">
           Eligibility
         </h2>
       </div>
@@ -153,7 +153,7 @@
             government quota seats.</li>
 
         </ul>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           For admissions in private medical colleges for Ayurveda, you will have to submit your entrance scores and high
           school scores as well. But if you have a dilemma regarding what college is the best forBAMS or which course to
           pick, the education consultants at Eduprov will delightfully help you select the best course and college for
@@ -166,14 +166,14 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-dark" id="tag-font">
+        <h3 class="text-center text-dark" >
           Colleges
         </h3>
       </div>
 
 
       <div class="col-md-12 mt-3">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           For <b>admissions in private medical colleges</b> for <b>Ayurveda, </b>you will have to submit your
           <b>entrance scores and high school scores as well.</b>
           But if you have a dilemma regarding what college is the best for <b>BAMS or which course to pick, the
@@ -237,12 +237,12 @@
 
 
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Scope
         </h2>
       </div>
       <div class="col-md-12 mt-2">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Newer trends have opened up many new careers and job opportunities for <b>Ayurveda students.</b> They can join
           as junior and senior
           doctors in government and private hospitals. Several chikitsa centers and Ayurveda clinics also recruit
@@ -297,7 +297,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -323,7 +323,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -340,13 +340,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
