--- a/master-of-designing-course.html
+++ b/master-of-designing-course.html
@@ -158,7 +158,7 @@
             <div class="col-md-12">
                 <h2 class="text-center text-dark" id="tag-font">
                   
-                        Top Colleges
+                        Top Courses
                 </h2>
             </div>
             <div class="col-md-6 mt-2">
