--- a/acharya-institute-of-technology.html
+++ b/acharya-institute-of-technology.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="canonical" href="https://eduprov.com/acharya-institute-of-technology.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acharya Institute Of Technology Admission in Bangalore</title>
+    <title>Acharya Institute Of Technology Admission Guidance in Bangalore</title>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -15,7 +15,7 @@
           "@type": "WebPage",
           "@id": "https://eduprov.com/acharya-institute-of-technology.html"
         },
-        "headline": "Acharya Institute Of Technology Admission in Bangalore",
+        "headline": "Acharya Institute Of Technology Admission Guidance in Bangalore",
         "description": "Acharya Institute Of Technology is a private co-educational engineering and management college in Bengaluru, India. The institute is approved by AICTE and affiliated to Visvesaraya Technological University (VTU), Belgaum",
         "image": "https://eduprov.com/images/favicon.png",  
         "author": {
@@ -40,7 +40,7 @@
 
     ">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Acharya Institute Of Technology Admission in Bangalore" />
+    <meta property="og:title" content="Acharya Institute Of Technology Admission Guidance in Bangalore" />
     <meta property="og:url" content="https://eduprov.com/acharya-institute-of-technology.html" />
     <meta property="og:site_name" content="Eduprov Educational Institute" />
     <meta property="og:description"
@@ -48,24 +48,24 @@
     <meta property="og:image" content="#" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@eduprov" />
-    <meta name="twitter:title" content="Acharya Institute Of Technology Admission in Bangalore" />
+    <meta name="twitter:title" content="Acharya Institute Of Technology Admission Guidance in Bangalore" />
     <meta name="twitter:description"
       content="Acharya Institute Of Technology is a private co-educational engineering and management college in Bengaluru, India. The institute is approved by AICTE and affiliated to Visvesaraya Technological University (VTU), Belgaum" />
     <meta name="twitter:image" content="#" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link rel="apple-touch-icon" href="/images/favicon.png" >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
   
@@ -101,13 +101,13 @@
   </div>
   
 
-  <div class="container mt-3">
+  <div class="container mt-3 ">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
             <b>Acharya Institute Of Technology</b> is a private co-educational engineering and management college in Bengaluru, India. The institute is approved by AICTE and affiliated to Visvesaraya Technological University (VTU), Belgaum. This is a part of Acharya institution that has a mission to provide excellent academic ambiance to the students to achieve the highest standards of technical education, meaningful research, and service to mankind. This is one of the famous institutes among Acharya Institutes, accredited by NBA and offers the variety of UG, PG and Research Programs for the benefit of the students.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark " >
             This institute also provides the place for students to meet and interact with each other in a comfortable environment through alumni meet conducted by the alumni committee. The campus of this institution gives the nature’s touch like it has beautiful gardens, flower beds, fruits and flower bearing trees, water ponds, park furniture, etc.
         </p>
 
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-md-4">
+        <div class="col-md-4 text-dark">
             <ul>
                 <li><b>Engineering – B.E.</b></li>
                 <li> Aeronautical Engineering</li>
@@ -164,7 +164,7 @@
                 <li>Physics</li>
             </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-dark">
             <ul>
                 <li><b>Diploma in Engineering</b></li>
                 <li>Aeronautical Engineering</li>
@@ -209,7 +209,7 @@
             
             </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 text-dark">
             <ul>
                 <li><b>Education</b></li>
                 <li>Diploma in Elementary Education (D.El.Ed)</li>
@@ -255,24 +255,24 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
+          <div class="col-md-12 text-center text-dark">
             <h3 > Admission Procedure</h3>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 text-dark">
             <ul>
                 <li>Fill in the application form.</li>
                 <li> A duly filled form should be submitted along with two passport size photographs.</li>
                 <li> Fees payment can be done either by cash/ cheque on the same date</li>
             </ul>
            <label><b>Documents Required</b></label>
-           <p class="text-justify" id="paragraph-font">
+           <p class="text-justify text-dark">
             Original marks card of SSLC/10Std/intermediate for, age proof, 10+2/PUC/equivalent, Original transfer certificates, Original migration certificate (for other than the Karnataka State Board students).
         </p>
         <label>12 recent passport size photographs.</label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
             It is to be noted that qualified foreign nationals are provisionally admitted subject to regularization after obtaining the eligibility certificate issued by the Bangalore University. Student visa, Residential permit, and serology report (HIV Test), AIU Letter for foreign nationals are a must.
         </p>
      
@@ -320,7 +320,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -346,7 +346,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -363,13 +363,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
