--- a/b-pharm-course.html
+++ b/b-pharm-course.html
@@ -52,19 +52,19 @@
     content="Bachelor of Pharmacy (B Pharm) is a four-year undergraduate program in which students study the methods and process of preparing drugs and how does the dispensing of medicine and drugs take place. Pharmacy" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png"   >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
@@ -105,7 +105,7 @@
   <div class="container mt-1">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
           <b>Bachelor of Pharmacy (B Pharm)</b> is a four-year undergraduate program in which students study the
           methods
           and process of preparing drugs and how does the dispensing of medicine and drugs take place.
@@ -117,13 +117,13 @@
           students who are focused in the sciences and like the direct aspect of change it brings.
         </p>
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark" >
           This course witnesses all the information about <b>pharmacy or the medicines</b> and do teach the students
           about its consequences on the human body. Under this course, the students get the precise overture of
           ample of the medicines.
 
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
           A development that is showing a great impact on the world in terms of growth is now simply reflecting the
           adverse impact onhuman health.Earlier the people used to say ‘health is wealth’, but now
           wealth is only
@@ -142,14 +142,14 @@
 
     <div class="row">
       <div class="col-md-12 mt-2">
-        <h2 class="text-center  text-dark" id="tag-font">
+        <h2 class="text-center  text-dark">
           Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12 mt-2">
+      <div class="col-md-12 mt-2 text-dark">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
           Apply for the state CET exam. Example, Karnataka students shall apply for KCET.Attempt the exam for PCB or PCM
           or PCMB subjects depending on the subjects you took in 11th and 12th.
         </p>
@@ -164,12 +164,12 @@
             biology at the undergraduate level from a recognized university.</li>
           <li>The minimum age required is 17 years old.</li>
         </ul>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark" >
           The student must have had either physics, chemistry and mathematics or physics, chemistry and biology
           subjects in 11th and 12th. This means that this course is for both PCM and PCB students stream from a
           recognized board, with an aggregate of 50%.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify text-dark">
           Students wishing to get a seat in B pharmacy through government quota seats must compulsorily give CET
           exams of their respective courses. But, there are other private college and university entrance exams for
           B Pharma. Read along to find out more about the procedures and different entrance exams for B Pharmacy
@@ -184,13 +184,13 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-dark" id="tag-font">
+        <h3 class="text-center text-dark">
           Top Colleges
         </h3>
       </div>
 
 
-      <div class="col-md-12 mt-2">
+      <div class="col-md-12 mt-2 text-dark">
         <ul>
           <li>Government College of Pharmacy Bangalore</li>
           <li>Acharya and BM Reddy College of Pharmacy Bangalore</li>
@@ -222,12 +222,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-dark" id="tag-font">
+        <h3 class="text-center text-dark" >
           Colleges in Karnataka
         </h3>
       </div>
 
-      <div class="col-md-12 mt-2">
+      <div class="col-md-12 mt-2 text-dark">
         <ul>
           <li>B.V.V.Sanghas Hangal Shri Kumareshwar College of Pharmacy Bagalkot</li>
           <li>Bapuji College of Pharmacy Davangere</li>
@@ -280,14 +280,14 @@
     </div>
 
     <div class="col-md-12">
-      <h4 class="text-center  text-dark" id="tag-font">
+      <h4 class="text-center text-dark" >
         Scope
       </h4>
     </div>
 
 
     <div class="col-md-12 mt-3">
-      <p class="text-justify" id="paragraph-font">
+      <p class="text-justify text-dark">
         As mentioned above, the health condition of the people is deteriorating and now the mob requires the
         help of pharmacists to assist them with the vital role medicines,so the demand of the pharmacist
         is
@@ -299,7 +299,7 @@
         learn with hard work and dedication can have a bright future in this line.
       </p>
 
-      <p class="text-justify" id="paragraph-font">
+      <p class="text-justify text-dark" >
         After BPharm, students are offered various employment opportunities in the pharmacy sector. They can
         open their own pharmacy by registering themselves under State Pharmacy Council. They can work in different
         fields.
@@ -362,7 +362,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -388,7 +388,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -405,13 +405,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
