--- a/bachelor-of-archaelogy.html
+++ b/bachelor-of-archaelogy.html
@@ -53,19 +53,19 @@
     content="Do you like the thought of studying historic events and items? If so, a degree in archaeology makes perfect sense. It is the perfect way to get a chance of working with historical artifacts, at historical sites" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png" >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -101,7 +101,7 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           Do you like the thought of studying about historic events and items? If so, adegree in
           archaeology makes perfect sense. It is the perfect way to get a chance of working with
           historical artifacts, at historical sites, get the opportunity of working in the restoration
@@ -119,14 +119,14 @@
 
     <div class="row">
       <div class="col-md-12 ">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center ">
           Syllabus
         </h2>
       </div>
 
 
       <div class="col-md-12 mt-1">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           During this course, students get to study Ancient history, principles and methods of
           archaeology, before christ, museology, a timeline of ancient history, classic antiquity,
           early iron age, greek and roman civilizations, structural conservation of ancient monuments,
@@ -137,7 +137,7 @@
           Environmental Archaeology, Marine Archaeology, Battlefield Archaeology, Urban Archaeology,
           Experimental Archaeology, Archaeozoology etc.
         </p>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           This course is usually provided alone or with a combination of complementary majors
           like museology, ancient history, ancient Indian history, culture, vocational archaeology,
           English, Language etc.
@@ -148,7 +148,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Scope
         </h2>
       </div>
@@ -156,7 +156,7 @@
 
       <div class="col-md-12 mt-1">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           During the course of six semesters, students will learn more about the subjects like Practice of
           dance analysis, On stage performance, Dance and Community Engagement, expression of emotions through
           drama and music, performance, dance & cultural studies, Community Engagement, performance-based
@@ -174,7 +174,7 @@
     </div>
 
     <div class="col-md-12">
-      <h3 class="text-center text-dark" id="tag-font">
+      <h3 class="text-center text-dark" >
         Top Colleges
       </h3>
     </div>
@@ -236,7 +236,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-dark" id="tag-font">
+        <h3 class="text-center " >
           Career
         </h3>
       </div>
@@ -244,7 +244,7 @@
 
       <div class="col-md-12">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           Completing a degree in Archaeologycan open doors to jobs as Archaeologist, Manager,
           Officer, Assistant curator, Curator, R and D professional etc.in Archaeological Survey
           of India, Tourism Department, state government, Central Government, Museum, Art galleries,
@@ -297,7 +297,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -323,7 +323,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -340,13 +340,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
