--- a/bachelor-of-dance.html
+++ b/bachelor-of-dance.html
@@ -52,19 +52,19 @@
     content="Do you enjoy dancing and performing? If yes, a bachelor of arts degree in dance might be a great opening of chance for you! Bachelor of Arts in Dance is a three years long UG course" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
@@ -99,10 +99,10 @@
   <!--Nav Bar End-->
 
 
-  <div class="container mt-3">
+  <div class="container mt-3 text-dark">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Do you enjoy dancing and performing? If yes, a <b>bachelor of arts degree in dance</b> might be a
           great opening of chance for you! <b>Bachelor of Arts in Dance is a three years long UG course</b>
           dealing with the art of dance and performing dance and involves movements of the body against
@@ -123,7 +123,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Eligibility
         </h2>
       </div>
@@ -140,7 +140,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Syllabus
         </h2>
       </div>
@@ -148,7 +148,7 @@
 
       <div class="col-md-12 mt-2">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           During the course of six semesters students will learn more about the subjects like Practice of
           dance analysis, On stage performance, Dance and Community Engagement, expression of emotions through
           drama and music, performance, dance & cultural studies, Community Engagement, performance-based
@@ -166,7 +166,7 @@
     </div>
 
     <div class="col-md-12">
-      <h3 class="text-center text-dark" id="tag-font">
+      <h3 class="text-center text-dark">
         Top Colleges
       </h3>
     </div>
@@ -192,7 +192,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 class="text-center text-dark" id="tag-font">
+        <h3 class="text-center text-dark">
           Scope
         </h3>
       </div>
@@ -200,7 +200,7 @@
 
       <div class="col-md-12">
 
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           After graduating from this course successfully, students can gain employment in the glamorous worlds
           of Television, Museums, Galleries, Theatre, Music industry, Movie industry, Choreography, Dance troupes,
           Dance schools and many more where they can take up integral positions such as dramaturges, designers,
@@ -251,7 +251,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -277,7 +277,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -294,13 +294,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
