--- a/bachelor-of-designing-course.html
+++ b/bachelor-of-designing-course.html
@@ -52,19 +52,19 @@
     content="Have you ever wondered what job can combine your favorite hobbies and passion? Then, designing is your career! Designing is one of the most market-friendly courses that are always on demand." />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"   />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -97,10 +97,10 @@
     </div>
   </div>
 
-  <div class="container mt-3">
+  <div class="container mt-3 text-dark">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           Have you ever wondered what job can combine your favorite hobbies and passion? Then,
           designing is your career! Designing is one of the most market-friendly courses that are
           always on demand. Youngsters obviously like to keep up with the latest trends and make
@@ -112,7 +112,7 @@
         </p>
 
         <label><b>Fashion design</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           This is probably one of the most popular designing course among Indian students.
           It covers textile technology, garment construction, and manufacturing, fashion marketing,
           ornamentation, etc. After completing a BDes course the new graduates can work as fashion
@@ -121,13 +121,13 @@
         </p>
         <hr />
         <label><b>Textile design</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           This is related to the field of designing patterns and prints on textiles. It leads to jobs in textile
           engineering, fashion designing, design consultants, etc.
         </p>
         <hr />
         <label><b>Leather Design</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Leather accessories are bought by both men, women, and children of all ages as the demand for carefully
           crafted leather products keeps increasing with time. After the completion of a degree in a design called BDes
           Leather designing students can get jobs as an accessory designer, fashion designers, consultants, stylists,
@@ -135,7 +135,7 @@
         </p>
         <hr />
         <label><b>Furniture and Interior Design</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           Interior designing is very close to
           architecture but the art of designing the interiors to make it appealing. It
           involves making use of resources and spaces available and adding beauty,
@@ -144,7 +144,7 @@
         </p>
         <hr />
         <label><b>Product Design</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           Product designing is one of the most popular degrees among science students, commerce students, and art
           students equally. Product designers work on the usability, practical approach, and beauty of products. It is
           the art of improving the design of pre-existing products and developing new products. There are also diploma,
@@ -152,14 +152,14 @@
         </p>
         <hr />
         <label><b>Animation Design and Film and Video Communication</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
           This is the best course for students interested in animation, special effects, and filming. It can lead to
           opportunities like an animator, cartoonist,
           illustrator, photographer, professional filmmaker, etc.
         </p>
         <hr />
         <label><b>Animation</b></label>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           Animation and animation and film design are similar courses but offered at different top institutions.
         </p>
         <hr />
@@ -188,14 +188,14 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Eligibility
 
         </h2>
       </div>
 
       <div class="col-md-12 mt-2">
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify" >
 
           These are some of the best courses in designing that are available in the top design colleges of India. This
           is a 4-year course that has admission applications out for students who have finished 12th or PUC with a
@@ -214,7 +214,7 @@
           <li>SOFT Entrance Test</li>
           <li>NEED (National Entrance Examination for Design)</li>
         </ul>
-        <p class="text-justify" id="paragraph-font">
+        <p class="text-justify">
           These entrance exams judge students and rank them based on design aptitude, general aptitude, talent, skill,
           general knowledge, creativity, spontaneity, planning or approach, abstract thinking, and interpretation skills
           of students. After passing the first screening test which involves written part, multiple-choice questions,
@@ -225,7 +225,7 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center text-dark" id="tag-font">
+        <h2 class="text-center text-dark" >
           Top Colleges
         </h2>
       </div>
@@ -328,7 +328,7 @@
           <hr style="color:gray"/> 
            <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
            <p>
-            <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+            <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -354,7 +354,7 @@
             <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
           </p>
           <p>
             <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -371,13 +371,13 @@
         <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
            <p>
-            <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
           </p>
           <p>
-            <a id="links" href="">B.Com(Professional)</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
           </p>
           <p>
-            <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+            <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
           </p>
           <hr style="color:gray"/> 
           <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
