--- a/bachelor-of-education-course.html
+++ b/bachelor-of-education-course.html
@@ -53,19 +53,19 @@
     content="Education changes everyone's life For a human being, education is present in each and every stage of his /her life. Education has been present from ancient times and has been seen throughout the history of the world." />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"   />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -100,10 +100,10 @@
 
 
 
-    <div class="container mt-3">
+    <div class="container mt-3 text-dark">
         <div class="row">
             <div class="col-md-12">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     <b> Education changes everyone's life.</b> For a human being, education is present in each and every
                     stage of his /her life. Education has been present from ancient times and has been seen throughout
                     the history of the world. It has transformed into various phases at various stages depending upon
@@ -111,7 +111,7 @@
                     click.
                 </p>
 
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     <b> B. Ed. or Bachelor of Education</b> is a bachelor's degree course at the undergraduate level. It
                     is offered by a lot of colleges or universities all over the country.
                     It is a course for students who intend to work as teachers. Teaching is a respected job in India and
@@ -123,7 +123,7 @@
                     accessible at many open universities through distance learning and here the duration is a minimum of
                     2 years and a maximum of 5 years.
                 </p>
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     The National Council for Teacher Education is the solitary authority that is accountable for
                     observing the programs on education, including B.Ed.
                 </p>
@@ -133,19 +133,19 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center text-dark" id="tag-font">
+                <h2 class="text-center text-dark">
                     Eligibility
                 </h2>
             </div>
 
             <div class="col-md-12 mt-2">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
 
                     To be eligible for the <b>B.Ed. course</b> one must hold a <b>BA / B.Sc / B. Com degree</b> from a
                     recognized University/Board with at least 50% marks in aggregate.
                 </p>
 
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     Aspirants need to appear in an entrance test held by Universities and various states and also
                     independent bodies. Admission to various colleges and educational institutions is offered according
                     to the rank of the students in the respective entrance tests. This is a highly competitive sector
@@ -157,33 +157,33 @@
             </div>
 
             <div class="col-md-12">
-                <h2 class="text-center text-dark" id="tag-font">
+                <h2 class="text-center text-dark" >
                     Scope
                 </h2>
             </div>
             <div class="col-md-12 mt-2">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     Before taking up any course/career, the usual question that arises in every person’s mind is the
                     scope of that course/curriculum; questions like, “Can I get a job after this course?” and “What are
                     the areas of diversification after finalizing this course?”
                 </p>
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     After finishing B. Ed, there are a lot of possibilities to get employed in government, in addition
                     to private schools, with a decent salary package. The remuneration depends upon your post in the
                     school.
                 </p>
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     If you are economically strong and have the ability to run a school, then the second option is to
                     open your own school. In the beginning, you can start a lesser school and afterward, with the help
                     of loans and finances of banks and other financial institutions you can expand it to set up a new,
                     bigger school.
                 </p>
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     Interested aspirants can also follow higher studies after completing B.Ed. They can pursue M.Ed or
                     Master of Education, which is the higher specialized postgraduate course after the accomplishment of
                     B.Ed. After successful completion of M.Ed., students can do a Ph.D.
                 </p>
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     Teaching is a respected profession in this country and also in the entire world. There is a demand
                     for teachers both government and private sectors. After completion of B.Ed, candidates shall be
                     entitled to get employment in secondary as well as higher secondary schools. With a B.Ed degree
@@ -229,7 +229,7 @@
             <hr style="color:gray"/> 
              <label class="text-uppercase mb-4 fw-bold lh-4 text-white course-label">MBA</label>
              <p>
-              <a id="links" href="https://eduprov.com/finance-management.html">Finance Management</a>
+              <a id="links" href="https://eduprov.com/mba-banking-finance-course.html">Finance Management</a>
             </p>
             <p>
               <a id="links" href="https://eduprov.com/retail-management-course.html">Retail Management</a>
@@ -255,7 +255,7 @@
               <a id="links" href="https://eduprov.com/bsc-computer-course.html">BSc.CS</a>
             </p>
             <p>
-              <a id="links" href="https://eduprov.com/bca-course.html">BCA</a>
+              <a id="links" href="https://eduprov.com/bachelor-of-computer-application.html">BCA</a>
             </p>
             <p>
               <a id="links" href="https://eduprov.com/mca-course.html">MCA</a>
@@ -272,13 +272,13 @@
           <div  class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
             <label class="text-uppercase mb-4 font-weight-bold text-white">Commerce</label>
              <p>
-              <a id="links" href="https://eduprov.com/bcom-hons-course.html">B.Com(hons)</a>
+              <a id="links" href="https://eduprov.com/bachelor-of-commerce-honours.html">B.Com(hons)</a>
             </p>
             <p>
-              <a id="links" href="">B.Com(Professional)</a>
+              <a id="links" href="https://eduprov.com/bachelor-of-commerce-professional.html">B.Com(Professional)</a>
             </p>
             <p>
-              <a id="links" href="https://eduprov.com/bba-course.html">BBA</a>
+              <a id="links" href="https://eduprov.com/bachelor-of-business-administration.html">BBA</a>
             </p>
             <hr style="color:gray"/> 
             <label class="text-uppercase mb-4 font-weight-bold text-white">Exam</label>
