--- a/commerce-course-blogs.html
+++ b/commerce-course-blogs.html
@@ -52,19 +52,19 @@
     content="Commerce is a field which students who have an interest in the field of financial information" />
   <meta name="twitter:image" content="#" />
   <meta name="twitter:url" content="https://twitter.com/eduprov" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
   <link rel="stylesheet" href="blog.css" />
   <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/bcom-professional-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-commerce-professional.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B. Com (Professionals), Bachelor of Commerce Professionals</label>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/bcom-hons-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-commerce-honours.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">B.Com Honours (Hons)</label>
@@ -150,7 +150,7 @@
         </div>
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/bba-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-business-administration.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Business Administration</label>
@@ -168,7 +168,7 @@
 
         <div class="col-md-4">
           <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-            <a href="https://eduprov.com/bcom-course.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
+            <a href="https://eduprov.com/bachelor-of-commerce.html" style="text-decoration: none;" class="icon-box text-center" data-bg-color="#fff"
               style="background-color: rgb(255, 255, 255)" data-abc="true">
               <div class="content">
                 <label class="title fz-20">Bachelor of Commerce</label>
