--- a/head.html
+++ b/head.html
@@ -25,8 +25,8 @@
       content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"    />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
