--- a/mba-banking-finance-course.html
+++ b/mba-banking-finance-course.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="canonical" href="https://eduprov.com/banking-finance-course.html" />
+    <link rel="canonical" href="https://eduprov.com/mba-banking-finance-course.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBA Banking and Finance Admission Guidance in Bangalore</title>
     <script type="application/ld+json">
@@ -13,7 +13,7 @@
         "@type": "BlogPosting",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "https://eduprov.com/banking-finance-course.html"
+          "@id": "https://eduprov.com/mba-banking-finance-course.html"
         },
         "headline": "MBA Banking and Finance Admission Guidance in Bangalore",
         "description": "MBA in Finance and insurance is a postgraduate course that can be achieved by students of any stream. This is a two-year program that will cover all the basics and concepts in the sector of finance and insurance.",
@@ -40,7 +40,7 @@
     ">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="MBA Banking and Finance Admission Guidance in Bangalore" />
-    <meta property="og:url" content="https://eduprov.com/banking-finance-course.html" />
+    <meta property="og:url" content="https://eduprov.com/mba-banking-finance-course.html" />
     <meta property="og:site_name" content="Eduprov Educational Institute" />
     <meta property="og:description"
       content="MBA in Finance and insurance is a postgraduate course that can be achieved by students of any stream. This is a two-year program that will cover all the basics and concepts in the sector of finance and insurance. " />
@@ -52,19 +52,19 @@
       content="MBA in Finance and insurance is a postgraduate course that can be achieved by students of any stream. This is a two-year program that will cover all the basics and concepts in the sector of finance and insurance. " />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="https://twitter.com/eduprov" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
-    <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  />
+    <link rel="apple-touch-icon" href="/images/favicon.png"  >
     <meta name="author" content="thephotogenicbug">
     <link rel="stylesheet" href="blog.css" />
     <link rel="stylesheet" href="accordian.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
@@ -100,7 +100,7 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-12">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify">
                     <b> MBA in Finance and insurance </b> is a postgraduate course that can be achieved by students of
                     any stream. This is a two-year program that will cover all the basics and concepts in the sector of
                     finance and insurance. This <b>MBA degree</b> will also cover the basics of management along with
@@ -115,13 +115,13 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center text-dark" id="tag-font">
+                <h2 class="text-center text-dark" >
                     Eligibility
                 </h2>
             </div>
 
             <div class="col-md-12 mt-2">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     The person can opt for a part-time/full-time course as per their convenience. Some universities
                     conduct entrance examination for admission. Several national level exams such as <b>GATE, CAT,
                         GMAT,</b> etc.. will be conducted for admission in MBA. Candidate should have at least 50% of
@@ -135,13 +135,13 @@
                 <hr />
             </div>
             <div class="col-md-12">
-                <h2 class="text-center text-dark" id="tag-font">
+                <h2 class="text-center text-dark">
                     Scope
                 </h2>
             </div>
 
             <div class="col-md-12 mt-2">
-                <p class="text-justify" id="paragraph-font">
+                <p class="text-justify" >
                     This course has a very good demand in international as well as national market. The course will make
                     you an expert in the field of finance and insurance and you can find jobs in any local as well as
                     international finance or insurance agencies. The applicant needs to have good self-confidence,
