--- a/technical-course-blogs.html
+++ b/technical-course-blogs.html
@@ -2,23 +2,47 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Technical Course Information Scope Exam Details | Eduprov</title>
-  <meta name="description" content="Technical course means a unit of learning which yields skills, knowledge, and appreciation essential to the specific occupation for which the program was designed.
-  " />
-<meta name="keywords" content="
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/technical-course-blogs.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Techinical Course Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
   
-  " />
+  </script>
+  <meta name="description" content="">
+  <meta name="keywords" content=" 
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Techinical Course Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/technical-course-blogs.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Techinical Course Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"    />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  >
   <meta name="author" content="thephotogenicbug">
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
@@ -32,12 +56,15 @@
       <div class="line"></div>
     </div>
     <ul class="nav-links">
-      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
-      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li><a href="https://eduprov.com/">Home</a></li>
+      <li><a href="https://eduprov.com/admission-guidance.html">Admission Guidance</a></li>
+      <li><a href="https://eduprov.com/career-counseling.html">Career Counseling</a></li>
+      <li><a href="https://eduprov.com/application-form.php">Application Form</a></li>
+      <li><a href="https://eduprov.com/contact-form.php">Contact Us</a></li>
     </ul>
   </nav>
   <div id="logo">
-    <img src="images/logo-white.png" alt="Edu-logo" />
+    <a href="https://eduprov.com/"><img src="images/logo-white.png" alt="Edu-logo" title="eduprov logo" /></a>
   </div>
 
   <div class="banner">
@@ -84,7 +111,7 @@
 
         <div class="col-md-6">
             <div class="col max-mb-30 aos-init aos-animate" data-aos="fade-up">
-              <a href="https://eduprov.com/bca-course.html" style="text-decoration: none;" class="icon-box text-center"
+              <a href="https://eduprov.com/bachelor-of-computer-application.html" style="text-decoration: none;" class="icon-box text-center"
                 data-bg-color="#fff" style="background-color: rgb(255, 255, 255)" data-abc="true">
                 <div class="content">
                   <label class="title fz-20">Bachelor of Computer Application</label>
